# EV3WebController

./: .gitignore  AUTHORS  CHANGELOG.md  README.md  bootstrap.py  conf.py  pyproject.toml  requirements.txt  run.sh  runserver.py  stop.sh
conf/: conf.cfg-sample
ev3webcontroller/: __init__.py
ev3webcontroller/lib/: movements.py  utils.py
ev3webcontroller/static/js/: ev3web.js
ev3webcontroller/templates/: index.html
ev3webcontroller/views/: views.py
web/: __init__.py  decorators.py
web/lib/: movements.py  utils.py
web/static/css/: ev3web.css
web/static/js/: ev3web.js
web/views/: views.py
